Change all endpoindts routes
