# src/routes/getAllUsers.js
@@ -3,6 +3,6 @@ const router = express.Router();
 const { consulta } = require("../controllers/getAllUsers");
 const auth = require("../middlewares/auth");
 
-router.get("/user/getAllUsers", auth.auth, consulta);
+router.get("/users/", auth.auth, consulta);
 
 module.exports = router;
